# SmallSerpentineIntelligence

./: .gitignore  .replit  Makefile  Procfile  README.md  checks.py  conftest.py  database.py  database_actions.sql  database_schema.sql  main.py  parseMessage.py  parse_message.py  pyproject.toml  requirements.txt  stats_bot.py  test_database.py  test_parse_message.py  test_server.py  testrunner.py
.github/workflows/: main.yml
