[tool.poetry]
name = "smallserpentineintelligence"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^20.3.3"
psycopg2-binary = "^2.8.6"
flask = "^1.1.2"
replit = "^2.0.0"
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
